padding fix, hide images on mobile

--- a/_sass/base-body-padding.scss
+++ b/_sass/base-body-padding.scss
@@ -1,3 +1,8 @@
 body {
-    padding-top: 50px; // makes the content clear the navbar
-}
+    padding-top: 60px;
+  }
+  @media (max-width: 979px) {
+    body {
+      padding-top: 0px;
+    }
+  }
